--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.4.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "prettier": "^2.8.8",
     "webpack": "^4.35.3",
     "webpack-cli": "^3.3.5"
   },
